# ai-job-application-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: api.md  architecture.md  provider-extension.md
examples/: analyze_request.json  curl_analyze.sh  sample_job_description.txt  sample_resume.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
linkedin_demo/: demo-resume.txt  linkedin-post.md  recording-script.md
src/ai_job_application_copilot/: __init__.py  cli.py  main.py
src/ai_job_application_copilot/agents/: __init__.py  graph.py  state.py  steps.py
src/ai_job_application_copilot/api/: routes.py
src/ai_job_application_copilot/core/: config.py
src/ai_job_application_copilot/data/: job_catalog.json
src/ai_job_application_copilot/db/: __init__.py  repository.py
src/ai_job_application_copilot/models/: __init__.py  schemas.py
src/ai_job_application_copilot/services/: __init__.py  analyzer.py  application.py  providers.py  recommendations.py  resume_profile.py  text_tools.py  workflow.py
tests/: conftest.py  test_api.py  test_recommendations.py  test_repository.py  test_text_tools.py  test_workflow.py
