[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-job-application-copilot"
version = "0.1.0"
description = "Deterministic FastAPI and LangGraph backend for tailored job applications."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AI Job Application Copilot Contributors" }]
keywords = ["fastapi", "langgraph", "career", "resume", "ai-agents", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=0.2.60",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]
llm = [
    "openai>=1.40.0",
]

[project.scripts]
ai-job-copilot = "ai_job_application_copilot.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_GITHUB_USERNAME/ai-job-application-copilot"
Documentation = "https://github.com/YOUR_GITHUB_USERNAME/ai-job-application-copilot/tree/main/docs"
Issues = "https://github.com/YOUR_GITHUB_USERNAME/ai-job-application-copilot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_job_application_copilot = ["data/*.json"]

[tool.pytest.ini_options]
addopts = "-q --cov=ai_job_application_copilot --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]
